# OHE

./: .gitignore  CMakeLists.txt  README.md  bench.py  bench_ppohe_fixn.py  bench_ppohe_fixp.py  bench_test.py  check_throt.cpp  david_ot.cpp  lut.cpp  multi.cpp  ohe.h  ohe_old.cpp  ohe_old.h  phases.txt  pparty_ohe.cpp  rot.cpp  test.cpp  test_ohe.cpp  test_send_block.cpp  test_util.h  throttle.sh  util_test.cpp  vector_rot.cpp  verify_vrot.sh
benches/: CMakeLists.txt  bench_ferret_budget.cpp  bench_ferret_budget_time.cpp  bench_fixed.cpp  bench_fixed_ferret.cpp  bench_lut.cpp  bench_ohe.cpp  bench_ohe_old.cpp  vscode.code-workspace
luts/: double3.lut  dummy_4_to_10.lut  dummy_4_to_256.lut
scripts/: bench_ferret_budget.sh  bench_ferret_budget_time_gmt.sh  bench_ferret_budget_time_ohe.sh  bench_ferret_gmt-batches_budget_time_ohe.sh  bench_ferret_gmt-batches_time_ohe.sh  bench_ferret_ohe-batches_budget_time_gmt.sh  bench_fixed.sh  bench_lut_batched.sh  bench_lut_serial.sh  bench_master_client.sh  bench_master_server.sh  bench_ohe_batched.sh  bench_ohe_serial.sh  bench_online_batched.sh  collate.ipynb  csv_maker.py  csv_maker_nb.ipynb  test_ohe_batched.sh  test_ohe_serial.sh  unthrottle.sh  verify_lut_batched.sh  verify_lut_serial.sh  verify_ohe.sh  verify_ohe_batched.sh  verify_ohe_serial.sh  vm_install.sh
src/: CMakeLists.txt  coord.cpp  coord.h  lut.cpp  lut.h  ohe.cpp  ohe.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_coord.cpp  test_david.cpp  test_lut.cpp  test_ohe.cpp  test_throttle.cpp  test_utils.cpp
verify/: CMakeLists.txt  verify_lut.cpp  verify_ohe.cpp
